search-api/kubernetes/Deployment.yml
apiVersion: apps/v1beta1
kind: Deployment
metadata:
  name: search-api
spec:
  replicas: 1
  template:
    metadata:
      labels:
        app: search-api
    spec:
      containers:
      - name: search-api
        image: 255196862254.dkr.ecr.eu-west-1.amazonaws.com/etimo/photo-garden-search-api:latest
        ports:
        - containerPort: 3000
