search-api/kubernetes/Service.yml
apiVersion: v1
kind: Service
metadata:
  name: search-api
spec:
  selector:
    app: search-api
  ports:
    - protocol: TCP
      port: 80
      targetPort: 3000
