search-api/kubernetes/Ingress.yml
apiVersion: extensions/v1beta1
kind: Ingress
metadata:
  name: search-api-ingress
  annotations:
    ingress.kubernetes.io/rewrite-target: /
spec:
  rules:
    - http:
        paths:
          - path: /search
            backend:
              serviceName: search-api
              servicePort: 80
